--- a/index.html
+++ b/index.html
@@ -1,17 +1,23 @@
 <!DOCTYPE html>
 <html lang="pt-br">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>SLIDESHOW</title>
     <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
     <div class="container-slide">
         <div class="action-button" id="previous">&laquo</div>
         <div class="container-items" id="container-items"></div>
         <div class="action-button" id="next">&raquo</div>
     </div>
+    <footer>
+        <p><i><strong>&copy; Copyright Dimas Capelari - 2022</strong></i></p>
+    </footer>
     <script src="./slideShow.js"></script>
 </body>
+
 </html>
